<resources>
    <string name="app_name">Android组件学习</string>
    <string name="refresh">刷新</string>
    <string name="toast">吐司</string>
    <string name="custom_toast">自定义吐司</string>
    <string name="snack_bar">SnackBar</string>
    <string name="add">添加</string>
    <string name="dialog_1">Dialog结合AlertDialog</string>
    <string name="dialog_2">单选对话框</string>
    <string name="btn_dialog_3">多选对话框</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="dialog_4">自定义对话框</string>
    <string name="dialog_5">自定义布局的对话框</string>
    <string name="help">帮助</string>
    <string name="search">搜索</string>
    <string name="context_menu">浮动上下文菜单</string>
    <string name="context_mode">上下文操作模式</string>
    <string name="popup_menu">弹出式菜单</string>
    <string name="menu">菜单</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="menu_intent">MenuIntent</string>
    <string name="notification">通知</string>
    <string name="setting">Setting</string>
    <string name="sync">Sync</string>
    <string name="message">Message</string>
    <string name="intent">Intent</string>
    <string name="search_in">搜索</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="copy_and_paste">复制粘贴</string>
    <string name="drag">拖放</string>
    <string name="picture_in_picture">画中画</string>
    <string name="layout_component">界面组件</string>
    <string name="animator_activity">动画和过渡</string>
    <string name="value_animator">属性平移动画</string>
    <string name="basic_use">基本使用</string>
    <string name="translate_x">X轴平移</string>
    <string name="translate_y">Y轴平移</string>
    <string name="background">背景色</string>
    <string name="width">宽度</string>
    <string name="together">混合</string>
    <string name="xml">xml属性文件动画</string>
    <string name="card_back_title">正面标题</string>
    <string name="card_back_description">正面内容</string>
    <string name="reverse">翻转</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="curve_path">曲线运动</string>
    <string name="curve_path3">Fling动画</string>
    <string name="scale_animation">缩放动画</string>
    <string name="spring_animate">弹簧动画</string>
    <string name="view_update">界面更新动画</string>
    <string name="view_page">ViewPage切换动画】</string>
    <string name="view_page2">ViewPage2切换</string>
    <string name="lorem_ipsum">嘿嘿</string>
    <string name="media">多媒体相关</string>
    <string name="video_record">视频录制</string>
    <string name="record">录制</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="aidl">AIDL服务</string>
    <string name="file_path">文件路径</string>
    <string name="file_storage_path">文件存储路径</string>
    <string name="save">保存</string>
    <string name="please_input_key">请输入key</string>
    <string name="please_input_value">请输入值</string>
    <string name="get">获取</string>
    <string name="share_preference">SharePreference</string>
    <string name="first_name">FIRST_NAME</string>
    <string name="last_name">LAST_NAME</string>
    <string name="room_database">ROOM_DATABASE</string>
    <string name="query">查询</string>
    <string name="share">分享</string>
    <string name="share_file">文件分享</string>
</resources>
