<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_gallery"/>
    <group
        android:id="@+id/operation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search"/>
        <item
            android:id="@+id/add"
            android:title="@string/add"
            android:icon="@android:drawable/ic_menu_add"/>
    </group>
    <group
        android:id="@+id/operation2"
        android:checkableBehavior="all">
        <item
            android:id="@+id/edit"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit"/>
        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            android:icon="@android:drawable/ic_menu_delete"/>
    </group>
</menu>