<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.layoutcomponent.DialogActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_dialog_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
            android:id="@+id/btn_dialog_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_1" />

        <Button
            android:id="@+id/btn_dialog_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_2" />

        <Button
            android:id="@+id/btn_dialog_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_3" />

        <Button
            android:id="@+id/btn_dialog_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dialog_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>