<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.layoutcomponent.MenuActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_context_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/context_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
        android:id="@+id/btn_context_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/context_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_context_menu" />

        <Button
            android:id="@+id/btn_popup_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popup_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_context_mode" />
        <Button
            android:id="@+id/btn_menu_intent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Intent Menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_popup_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
